@@ -1,5 +1,12 @@
 2008-08-19  kitone  <kitone@gna.org>
 
+	* share/menubar.xml:
+	* src/Makefile.am:
+	* src/actions/EditCell.cc:
+	Add functions "Edit Cell" and "Edit Next Cell".
+
+2008-08-19  kitone  <kitone@gna.org>
+
 	* src/SubtitleView.cc:
 	* src/SubtitleView.h:
 	Add the option "start_editing" to function "select".
